deploy: c2e098b351c09f6bde6a6c4666be4a0f50dd4cfa

--- a/404.html
+++ b/404.html
@@ -58,6 +58,8 @@
 }
 </style>
 
+<link rel="stylesheet" href="/assets/css/style.css">
+
 <script src="/assets/js/fontfaceobserver.js" type="text/javascript"></script>
 <script type="text/javascript">
     const nunitoObserver = new FontFaceObserver('Nunito Sans');
@@ -77,6 +79,7 @@
 <meta
 name="description"
 content="My development blog and portfolio">
+
         <link rel="stylesheet" href="/assets/css/404.css">
     </head>
     <body>
