--- a/Category B/index.html
+++ b/Category B/index.html
@@ -59,6 +59,8 @@
 }
 </style>
 
+<link rel="stylesheet" href="/assets/css/style.css">
+
 <script src="/assets/js/fontfaceobserver.js" type="text/javascript"></script>
 <script type="text/javascript">
     const nunitoObserver = new FontFaceObserver('Nunito Sans');
@@ -76,6 +78,7 @@
 
 <meta name="baseurl" content="">
 <meta name="description" content="My development blog and portfolio">
+
         <link rel="preload" href="/assets/img/profile.webp" as="image">
         <link rel="stylesheet" href="/assets/css/style.css">
         
