deploy: 023546f8d9db5ccddb6595f1556a1c011883b53c

--- a/markdown guide.html
+++ b/markdown guide.html
@@ -286,11 +286,11 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"></path></svg>
                 </button>
 </div>
-<ul class="nav-list"><li id="nav-second" aria-label="Portfolio-01">
+<ul class="nav-list"><li id="nav-second" aria-label="Introduce">
                     <div class="nav-item">
-                        <a href="/Portfolio/Portfolio-01.html" class="nav-list-link nav-sh">
+                        <a href="/Portfolio/Introduce.html" class="nav-list-link nav-sh">
                             <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                            <span>Portfolio-01</span>
+                            <span>Introduce</span>
                         </a>
 </div>
 </li></ul>
@@ -1020,7 +1020,7 @@ _________________
             'path'     : "Portfolio",
             'type'     : "post",
             'tags'     : "introduce, self-introduction, portfolio",
-            'url'      : "/Portfolio/Portfolio-01.html",
+            'url'      : "/Portfolio/Introduce.html",
             'image'    : "",
             'date'     : "2024-06-12"
         });
