deploy: 3de195a531acc04ff5eee011d17a01df7a922f96

--- a/License/네트워크관리사/필기 이론.html
+++ b/License/네트워크관리사/필기 이론.html
@@ -507,50 +507,197 @@
 <hr>
 
 <h3 id="웹-관련-포트">웹 관련 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|HTTP|80|웹사이트 트래픽|<br>
-|HTTPS|443|SSL이 적용된 보안 웹사이트 트래픽, TLS는 SSL의 표준|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>HTTP</td>
+      <td>80</td>
+      <td>웹사이트 트래픽</td>
+    </tr>
+    <tr>
+      <td>HTTPS</td>
+      <td>443</td>
+      <td>SSL이 적용된 보안 웹사이트 트래픽, TLS는 SSL의 표준</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="원격-관련-포트">원격 관련 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|SSH|22|보안 원격 접속|<br>
-|Telnet|23|원격 터미널 접속|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>SSH</td>
+      <td>22</td>
+      <td>보안 원격 접속</td>
+    </tr>
+    <tr>
+      <td>Telnet</td>
+      <td>23</td>
+      <td>원격 터미널 접속</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="파일-전송-관련-포트">파일 전송 관련 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|FTP|21|파일 전송 프로토콜|<br>
-|TFTP|69|간이 파일 전송 프로토콜|<br>
-|SFTP|22|SSH를 통한 보안 파일 전송|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>FTP</td>
+      <td>21</td>
+      <td>파일 전송 프로토콜</td>
+    </tr>
+    <tr>
+      <td>TFTP</td>
+      <td>69</td>
+      <td>간이 파일 전송 프로토콜</td>
+    </tr>
+    <tr>
+      <td>SFTP</td>
+      <td>22</td>
+      <td>SSH를 통한 보안 파일 전송</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="이메일-관련-포트">이메일 관련 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|SMTP|25|메일 전송 프로토콜|<br>
-|POP3|110|메일 수신 프로토콜|<br>
-|IMAP|143|인터넷 메시지 접근 프로토콜|<br>
-|SMTPS|465|보안 메일 전송 프로토콜|<br>
-|POP3S|995|보안 메일 수신 프로토콜|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>SMTP</td>
+      <td>25</td>
+      <td>메일 전송 프로토콜</td>
+    </tr>
+    <tr>
+      <td>POP3</td>
+      <td>110</td>
+      <td>메일 수신 프로토콜</td>
+    </tr>
+    <tr>
+      <td>IMAP</td>
+      <td>143</td>
+      <td>인터넷 메시지 접근 프로토콜</td>
+    </tr>
+    <tr>
+      <td>SMTPS</td>
+      <td>465</td>
+      <td>보안 메일 전송 프로토콜</td>
+    </tr>
+    <tr>
+      <td>POP3S</td>
+      <td>995</td>
+      <td>보안 메일 수신 프로토콜</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="네트워크-관리-관련-포트">네트워크 관리 관련 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|SNMP|161|단순 네트워크 관리 프로토콜|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>SNMP</td>
+      <td>161</td>
+      <td>단순 네트워크 관리 프로토콜</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="기타-주요-포트">기타 주요 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|DNS|53|도메인 이름 시스템|<br>
-|DHCP|67, 68|중앙 관리 서버를 통해 IP주소와 기타 네트워크 설정 자동 할당 프로토콜|<br>
-|LDAP|389|경량 디렉토리 접근 프로토콜|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>DNS</td>
+      <td>53</td>
+      <td>도메인 이름 시스템</td>
+    </tr>
+    <tr>
+      <td>DHCP</td>
+      <td>67, 68</td>
+      <td>중앙 관리 서버를 통해 IP주소와 기타 네트워크 설정 자동 할당 프로토콜</td>
+    </tr>
+    <tr>
+      <td>LDAP</td>
+      <td>389</td>
+      <td>경량 디렉토리 접근 프로토콜</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="db-관리-포트">DB 관리 포트</h3>
-<p>|서비스/프로토콜|포트 번호|설명|<br>
-|—|—|—|<br>
-|MySQL|3306|MySQL DB|<br>
-|PostgreSQL|5432|PostgreSQL DB|</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>서비스/프로토콜</th>
+      <th>포트 번호</th>
+      <th>설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>MySQL</td>
+      <td>3306</td>
+      <td>MySQL DB</td>
+    </tr>
+    <tr>
+      <td>PostgreSQL</td>
+      <td>5432</td>
+      <td>PostgreSQL DB</td>
+    </tr>
+  </tbody>
+</table>
+
+<h1 id="tcpip">TCP/IP</h1>
+<hr>
+
+<h3 id="tcp">TCP</h3>
 
     <!-- see https://giscus.app/ -->
     <div class="giscus" id="giscus" style="margin: 4rem auto;"></div>
