deploy: af3c1deb4027c5e3dc4905863c8d8da76a31bcc4

--- a/Category A/Subcategory a/index.html
+++ b/Category A/Subcategory a/index.html
@@ -286,11 +286,11 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"></path></svg>
                         </button>
 </div>
-<ul class="nav-list"><li id="nav-third" aria-label="필기 이론">
+<ul class="nav-list"><li id="nav-third" aria-label="필기 이론_TCP-IP">
                                 <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0.html" class="nav-list-link nav-sh">
+                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0_TCP-IP.html" class="nav-list-link nav-sh">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>필기 이론</span>
+                                        <span>필기 이론_TCP-IP</span>
                                     </a>
                                 </div>
                             </li></ul>
@@ -817,11 +817,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     
 
         posts.push({
-            'title'    : "필기 이론 정리",
+            'title'    : "필기 이론 정리_TCP/IP",
             'path'     : "License > 네트워크관리사",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0_TCP-IP.html",
             'image'    : "",
             'date'     : "2024-06-19"
         });
