--- a/License/네트워크관리사/필기 이론_TCP-IP.html
+++ b/License/네트워크관리사/필기 이론_TCP-IP.html
@@ -560,6 +560,40 @@
   </tbody>
 </table>
 
+<h1 id="ip">IP</h1>
+<hr>
+<p>IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것 <br><br>
+주소 체계에 따라 IPv4와 IPv6로 구분되며, Internet Protocol Version의 약어</p>
+
+<h3 id="ipv4와-ipv6-비교-정리">IPv4와 IPv6 비교 정리</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>IPv4</th>
+      <th>IPv6</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>브로드캐스트, 유니캐스트, 멀티캐스트</td>
+      <td>애니캐스트, 유니캐스트, 멀티캐스트</td>
+    </tr>
+    <tr>
+      <td>브로드캐스트는 과부하를 많이 발생 시킴</td>
+      <td>애니캐스트로 대체하여 과부하 저하</td>
+    </tr>
+    <tr>
+      <td> </td>
+      <td>IETF(국제 인터넷 표준화 기구)에서 채택 <br> IP 주소의 확장, 호스트 주소 자동 할당 <br> 등급별, 서비스별로 패킷을 구분할 수 있어 품질보장이 용이</td>
+    </tr>
+    <tr>
+      <td>예시 : 192.168.100.100 <br> 8비트씩 4부분 (32비트) 으로 10진수로 표시 <br> 0~255까지 표현</td>
+      <td>예시 : 2001:0230:abcd:ffff:0000:0000:ffff:1111 <br> 16비트씩 8부분 (128비트) 으로 16진수로 표시</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="주요-네트워크-포트-번호-정리">주요 네트워크 포트 번호 정리</h1>
 <hr>
 
@@ -718,6 +752,11 @@
       <td>DHCP</td>
       <td>67, 68</td>
       <td>중앙 관리 서버를 통해 IP주소와 기타 네트워크 설정 자동 할당 프로토콜</td>
+    </tr>
+    <tr>
+      <td>SNTP</td>
+      <td>123</td>
+      <td>장치 간 동기화 상태 체크 및 유지, 시간 동기화 관련 프로토콜</td>
     </tr>
     <tr>
       <td>LDAP</td>
