--- a/License/네트워크관리사/필기 이론_TCP-IP.html
+++ b/License/네트워크관리사/필기 이론_TCP-IP.html
@@ -562,7 +562,7 @@
 
 <h1 id="ip">IP</h1>
 <hr>
-<p>IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것 <br><br>
+<p>IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것<br>
 주소 체계에 따라 IPv4와 IPv6로 구분되며, Internet Protocol Version의 약어</p>
 
 <h3 id="ipv4와-ipv6-비교-정리">IPv4와 IPv6 비교 정리</h3>
@@ -590,202 +590,6 @@
     <tr>
       <td>예시 : 192.168.100.100 <br> 8비트씩 4부분 (32비트) 으로 10진수로 표시 <br> 0~255까지 표현</td>
       <td>예시 : 2001:0230:abcd:ffff:0000:0000:ffff:1111 <br> 16비트씩 8부분 (128비트) 으로 16진수로 표시</td>
-    </tr>
-  </tbody>
-</table>
-
-<h1 id="주요-네트워크-포트-번호-정리">주요 네트워크 포트 번호 정리</h1>
-<hr>
-
-<h3 id="웹-관련-포트">웹 관련 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>HTTP</td>
-      <td>80</td>
-      <td>웹사이트 트래픽</td>
-    </tr>
-    <tr>
-      <td>HTTPS</td>
-      <td>443</td>
-      <td>SSL이 적용된 보안 웹사이트 트래픽, TLS는 SSL의 표준</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="원격-관련-포트">원격 관련 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>SSH</td>
-      <td>22</td>
-      <td>보안 원격 접속</td>
-    </tr>
-    <tr>
-      <td>Telnet</td>
-      <td>23</td>
-      <td>원격 터미널 접속</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="파일-전송-관련-포트">파일 전송 관련 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>FTP</td>
-      <td>21</td>
-      <td>파일 전송 프로토콜</td>
-    </tr>
-    <tr>
-      <td>TFTP</td>
-      <td>69</td>
-      <td>간이 파일 전송 프로토콜</td>
-    </tr>
-    <tr>
-      <td>SFTP</td>
-      <td>22</td>
-      <td>SSH를 통한 보안 파일 전송</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="이메일-관련-포트">이메일 관련 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>SMTP</td>
-      <td>25</td>
-      <td>메일 전송 프로토콜</td>
-    </tr>
-    <tr>
-      <td>POP3</td>
-      <td>110</td>
-      <td>메일 수신 프로토콜</td>
-    </tr>
-    <tr>
-      <td>IMAP</td>
-      <td>143</td>
-      <td>인터넷 메시지 접근 프로토콜</td>
-    </tr>
-    <tr>
-      <td>SMTPS</td>
-      <td>465</td>
-      <td>보안 메일 전송 프로토콜</td>
-    </tr>
-    <tr>
-      <td>POP3S</td>
-      <td>995</td>
-      <td>보안 메일 수신 프로토콜</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="네트워크-관리-관련-포트">네트워크 관리 관련 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>SNMP</td>
-      <td>161</td>
-      <td>단순 네트워크 관리 프로토콜</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="기타-주요-포트">기타 주요 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>DNS</td>
-      <td>53</td>
-      <td>도메인 이름 시스템</td>
-    </tr>
-    <tr>
-      <td>DHCP</td>
-      <td>67, 68</td>
-      <td>중앙 관리 서버를 통해 IP주소와 기타 네트워크 설정 자동 할당 프로토콜</td>
-    </tr>
-    <tr>
-      <td>SNTP</td>
-      <td>123</td>
-      <td>장치 간 동기화 상태 체크 및 유지, 시간 동기화 관련 프로토콜</td>
-    </tr>
-    <tr>
-      <td>LDAP</td>
-      <td>389</td>
-      <td>경량 디렉토리 접근 프로토콜</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3 id="db-관리-포트">DB 관리 포트</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>서비스/프로토콜</th>
-      <th>포트 번호</th>
-      <th>설명</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>MySQL</td>
-      <td>3306</td>
-      <td>MySQL DB</td>
-    </tr>
-    <tr>
-      <td>PostgreSQL</td>
-      <td>5432</td>
-      <td>PostgreSQL DB</td>
     </tr>
   </tbody>
 </table>
