deploy: 7262e5033fbab802b59145e58c94351b7182df14

--- a/Category A/Subcategory a/index.html
+++ b/Category A/Subcategory a/index.html
@@ -858,7 +858,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
+            'title'    : "TCP/IP",
             'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
