--- a/Category B/Subcategory b/Subsubcategory 2/index.html
+++ b/Category B/Subcategory b/Subsubcategory 2/index.html
@@ -841,7 +841,7 @@ So then, his armour being furbished, his morion turned into a helmet, his hack c
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
+            'title'    : "TCP/IP",
             'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
