--- a/License/네트워크관리사/index.html
+++ b/License/네트워크관리사/index.html
@@ -1033,7 +1033,7 @@ IPv4와 IPv6 비교 정리
                         
                     </div>
                     <div class="box_contents">
-                        <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/01_TCP-IP.html"><h1 class="title_post">필기 이론 정리_TCP/IP</h1></a>
+                        <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/01_TCP-IP.html"><h1 class="title_post">TCP/IP</h1></a>
                         <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/01_TCP-IP.html" class="txt_post">
                             TCP/UDP
 
@@ -1450,7 +1450,7 @@ IPv4와 IPv6 비교 정리
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
+            'title'    : "TCP/IP",
             'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
