--- a/License/네트워크관리사/필기 이론_포트번호 정리.html
+++ b/License/네트워크관리사/필기 이론_포트번호 정리.html
@@ -1038,7 +1038,7 @@
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
+            'title'    : "TCP/IP",
             'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
