--- a/Category B/Subcategory b/Subsubcategory 1/index.html
+++ b/Category B/Subcategory b/Subsubcategory 1/index.html
@@ -827,7 +827,7 @@ Juliet’s father forces her into a marriage with Count Paris. To avoid this mar
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
+            'title'    : "TCP/IP",
             'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
