--- a/visitor counter.html
+++ b/visitor counter.html
@@ -333,11 +333,11 @@
                                     </a>
                                 </div>
                             </li>
-<li id="nav-third" aria-label="필기 이론_TCP-IP">
+<li id="nav-third" aria-label="TCP-IP">
                                 <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0_TCP-IP.html" class="nav-list-link nav-sh">
+                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/TCP-IP.html" class="nav-list-link nav-sh">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>필기 이론_TCP-IP</span>
+                                        <span>TCP-IP</span>
                                     </a>
                                 </div>
                             </li>
@@ -866,21 +866,21 @@
 
         posts.push({
             'title'    : "TCP/IP",
-            'path'     : "License > 네트워크관리사 > 필기 이론",
+            'path'     : "License > 네트워크관리사",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/01_TCP-IP.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/TCP-IP.html",
             'image'    : "",
             'date'     : "2024-06-19"
         });
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
-            'path'     : "License > 네트워크관리사",
+            'title'    : "TCP/IP",
+            'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0_TCP-IP.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/01_TCP-IP.html",
             'image'    : "",
             'date'     : "2024-06-19"
         });
