deploy: 8094a26553308a8bba8c2cc646654f5e4693a089

--- a/visitor counter.html
+++ b/visitor counter.html
@@ -317,19 +317,19 @@
                         </button>
 </div>
 <ul class="nav-list">
+<li id="nav-third" aria-label="포트번호 정리">
+                                <div class="nav-item">
+                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html" class="nav-list-link nav-sh">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
+                                        <span>포트번호 정리</span>
+                                    </a>
+                                </div>
+                            </li>
 <li id="nav-third" aria-label="필기 이론">
                                 <div class="nav-item">
                                     <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/index.html" class="nav-list-link nav-sh">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
                                         <span>필기 이론</span>
-                                    </a>
-                                </div>
-                            </li>
-<li id="nav-third" aria-label="필기 이론_포트번호 정리">
-                                <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0_%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html" class="nav-list-link nav-sh">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>필기 이론_포트번호 정리</span>
                                     </a>
                                 </div>
                             </li>
@@ -887,22 +887,22 @@
     
 
         posts.push({
-            'title'    : "주요 포트번호 정리",
-            'path'     : "License > 네트워크관리사 > 필기 이론",
+            'title'    : "포트번호 정리",
+            'path'     : "License > 네트워크관리사",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/02_%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html",
             'image'    : "",
             'date'     : "2024-06-20"
         });
     
 
         posts.push({
-            'title'    : "필기 이론 정리_TCP/IP",
-            'path'     : "License > 네트워크관리사",
+            'title'    : "주요 포트번호 정리",
+            'path'     : "License > 네트워크관리사 > 필기 이론",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0_%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%95%84%EA%B8%B0%20%EC%9D%B4%EB%A1%A0/02_%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html",
             'image'    : "",
             'date'     : "2024-06-20"
         });
