deploy: 20c2edd019c82e3aeb7da272b3dd73ebf4db2b88

--- a/License/네트워크관리사/TCP-IP.html
+++ b/License/네트워크관리사/TCP-IP.html
@@ -575,10 +575,50 @@
 
 <h1 id="ip">IP</h1>
 <hr>
-<p>IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것<br>
-주소 체계에 따라 IPv4와 IPv6로 구분되며, Internet Protocol Version의 약어</p>
+<p>IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것</p>
 
-<h3 id="ipv4와-ipv6-비교-정리">IPv4와 IPv6 비교 정리</h3>
+<h3 id="ip-헤더-영역">IP 헤더 영역</h3>
+
+<table>
+  <tr>
+    <th>0 ~ 3bit</th>
+    <th>4 ~ 7bit</th>
+    <th>8 ~ 15bit</th>
+    <th>16 ~ 18bit</th>
+    <th>19 ~ 31bit</th>
+  </tr>
+  <tr>
+    <td>Version (VER) <br> IP 프로토콜 버전</td>
+    <td>Header Length (HLEN) <br> 헤더의 길이</td>
+    <td>Type of Service (TOS) <br> 서비스 등급 유형</td>
+    <td colspan="2">Total Length <br> 헤더 + 데이터의 전체 크기</td>
+  </tr>
+  <tr>
+    <td colspan="3">Identification (식별자) <br> 상위 계층으로 데이터 전달 시 참고하는 정보</td>
+    <td>Flags DF, MD <br> 패킷 분할 관련</td>
+    <td>Fragment offset (분할간격) <br> 몇번째 분할인지 기억</td>
+  </tr>
+  <tr>
+      <td colspan="2">Time to live (TTL) <br> 패킷 지속 시간</td>
+      <td>Protocol <br> 상위 프로토콜의 정보 표시</td>
+      <td colspan="2">Header Checksum <br> 헤더 검사 영역 <br> 하위 데이터의 문제 확인, IP헤더의 완전성 검사, 필드를 '0'으로 하여 계산</td>
+  </tr>
+  <tr>
+      <td colspan="5">Source IP Address <br> 송신 측 IP 주소 (32bit)</td>
+  </tr>
+  <tr>
+      <td colspan="5">Destination IP Address <br> 수신 측 IP 주소 (32bit)</td>
+  </tr>
+  <tr>
+      <td colspan="5">Options (IP Option) <br> 보안, 패킷을 전달하는 방식 등 다양한 옵션 지정 영역</td>
+  </tr>
+  <tr>
+      <td colspan="5"> DATA </td>
+  </tr>
+</table>
+
+<h3 id="ip-주소-체계">IP 주소 체계</h3>
+<p>주소 체계에 따라 IPv4와 IPv6로 구분되며, Internet Protocol Version의 약어</p>
 
 <table>
   <thead>
