--- a/index.html
+++ b/index.html
@@ -739,9 +739,49 @@ TCP와 UDP 비교 정리
 IP
 
 IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것
-주소 체계에 따라 IPv4와 IPv6로 구분되며, Internet Protocol Version의 약어
 
-IPv4와 IPv6 비교 정리
+IP 헤더 영역
+
+
+  
+    0 ~ 3bit
+    4 ~ 7bit
+    8 ~ 15bit
+    16 ~ 18bit
+    19 ~ 31bit
+  
+  
+    Version (VER)  IP 프로토콜 버전
+    Header Length (HLEN)  헤더의 길이
+    Type of Service (TOS)  서비스 등급 유형
+    Total Length  헤더 + 데이터의 전체 크기
+  
+  
+    Identification (식별자)  상위 계층으로 데이터 전달 시 참고하는 정보
+    Flags DF, MD  패킷 분할 관련
+    Fragment offset (분할간격)  몇번째 분할인지 기억
+  
+  
+      Time to live (TTL)  패킷 지속 시간
+      Protocol  상위 프로토콜의 정보 표시
+      Header Checksum  헤더 검사 영역  하위 데이터의 문제 확인, IP헤더의 완전성 검사, 필드를 '0'으로 하여 계산
+  
+  
+      Source IP Address  송신 측 IP 주소 (32bit)
+  
+  
+      Destination IP Address  수신 측 IP 주소 (32bit)
+  
+  
+      Options (IP Option)  보안, 패킷을 전달하는 방식 등 다양한 옵션 지정 영역
+  
+  
+       DATA 
+  
+
+
+IP 주소 체계
+주소 체계에 따라 IPv4와 IPv6로 구분되며, Internet Protocol Version의 약어
 
 
   
