deploy: f8273a6726b066348557cd4ab54cd55cf28d1426

--- a/License/네트워크관리사/index.html
+++ b/License/네트워크관리사/index.html
@@ -720,12 +720,12 @@ ICMP
 
 
   ICMP의 Message Type
-```
-  0-Echo Reply : 네트워크 고장 여부 확인
-  1-요청거부
-  8-Echo Request : 요청 호스트가 네트워크에서 정상동작 여부 확인
-  11-TTL : 시간 초과 메시지 (패킷 무한 전송 차단을 위함)
-```
+
+
+* 0-Echo Reply : 네트워크 고장 여부 확인
+* 1-요청거부
+* 8-Echo Request : 요청 호스트가 네트워크에서 정상동작 여부 확인
+* 11-TTL : 시간 초과 메시지 (패킷 무한 전송 차단을 위함)
 
 
 SNMP (61)
@@ -771,17 +771,14 @@ OSPF
 
 
   OSPF 프로토콜이 최단 경로 탐색에 사용하는 기본 알고리즘
-    
-      Bellman-Ford 알고리즘
-```
+
+
+
+  Bellman-Ford 알고리즘
+    * 최단 경로 탐색 알고리즘
+* 가중치를 갖는 방향 그래프에서 최단 경로를 푸는 방식
     
   
-  최단 경로 탐색 알고리즘
-  가중치를 갖는 방향 그래프에서 최단 경로를 푸는 방식
-```
-
-
-
   Link State 알고리즘
     * 최단 경로 탐색 알고리즘
 * 두 꼭짓점 간의 가장 짧은 경로를 찾는 알고리즘
