deploy: a1d2a8e1086aa93cd9832277875865b14464f83a

--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@ I hope you like it!
 
 게시글 썸네일 이미지 설정
 
-Add thumbnail attribute to the post that you’d like to show a representative image when rendered.
+thumbnail 렌더링 시 대표 이미지를 표시하려는 게시물에 속성을 추가
 
 ---
 title: "Example Post: thumbnail exists"
@@ -1399,9 +1399,9 @@ thumbnail: "/assets/img/thumbnail/bricks.webp"
 
 
 
-Category Tag
+카테고리 태그
 
-You can use a grouping of post topics by specifying the tags field. It is helpful when you’d like to search related posts or pin them on the bottom of the page.
+관련 게시물을 검색하거나 페이지 하단에 고정하고 싶을 때 유용
 
 ---
 title: "Classic Literature #1: Romeo and Juliet"
@@ -1418,9 +1418,9 @@ thumbnail: "/assets/img/thumbnail/nightgardenflower.jpg"
 
 Note that the tags attribute won’t be reflected to the sidebar navigation.
 
-Bookmark
+북마크
 
-Setting bookmark: true makes the sidebar nav list display the corresponding post entity.
+bookmark: true 로 설정하면 목차에 해당 게시글이 표시
 
 ---
 title: "Markdown from A to Z"
@@ -1436,33 +1436,33 @@ bookmark: true
 
 
 
-Example _pages structure
+_pages 구조
 
-
-Here is the structure introduced in our repo:
 
 ._pages
 └── index.md
 └── markdown guide.md
-├── Category A
+├── License
 |   └── index.md
-|   ├── Subcatecory a
+|   ├── 네트워크관리사
 |       └── index.md
-|       └── post-01.md
-|       └── post-02.md
-├── Category B
+|       └── TCP-IP.md
+|       └── 기타 프로토콜.md
+├── Portfolio
 |   └── index.md
-|   ├── Subcatecory b    
+|   └── Introduce.md
+├── Writing Manual
+|   └── index.md
+|   ├── Guide
 |       └── index.md
-|       └── post-03.md
-|       ├── Subsubcategory 1
-|           └── index.md
-|           └── post-04.md
-|       ├── Subsubcategory 2
-|           └── index.md
-|           └── post-05.md
-|   ├── Subcatecory c
+|       └── Posting Guide.md
+|       └── Markdown Guide.md
+|       └── Comment System.md
+|       └── Vistor counter.md
+|   ├── example
 |       └── index.md
+|       └── example_01.md
+|       └── example_02.md
 
 
                         </a>
