deploy: d717a153ed11fc775d6377c031c020a883d04081

--- a/Category B/Subcategory b/Subsubcategory 1/index.html
+++ b/Category B/Subcategory b/Subsubcategory 1/index.html
@@ -778,7 +778,7 @@ Juliet’s father forces her into a marriage with Count Paris. To avoid this mar
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
