--- a/Writing Manual/Guide/Posting Guide.html
+++ b/Writing Manual/Guide/Posting Guide.html
@@ -946,7 +946,7 @@ bookmark: true
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
