--- a/Writing Manual/example/example_02.html
+++ b/Writing Manual/example/example_02.html
@@ -830,7 +830,7 @@
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
