--- a/Category A/Subcategory a/post-01.html
+++ b/Category A/Subcategory a/post-01.html
@@ -804,7 +804,7 @@ thumbnail: "/assets/img/thumbnail/bricks.webp"
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
