--- a/Category B/Subcategory b/Subsubcategory 2/index.html
+++ b/Category B/Subcategory b/Subsubcategory 2/index.html
@@ -792,7 +792,7 @@ So then, his armour being furbished, his morion turned into a helmet, his hack c
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
