--- a/License/index.html
+++ b/License/index.html
@@ -1230,7 +1230,7 @@ IP 주소 체계
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
