--- a/Writing Manual/example/index.html
+++ b/Writing Manual/example/index.html
@@ -837,7 +837,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
