--- a/posting guide.html
+++ b/posting guide.html
@@ -934,7 +934,7 @@ bookmark: true
     
 
         posts.push({
-            'title'    : "블로그 게시 가이드",
+            'title'    : "마크다운 가이드",
             'path'     : "Writing Manual > Guide",
             'type'     : "post",
             'tags'     : "Writing Manual, 게시 가이드",
