deploy: 20fe7a7145744de881f36d118ecb79c7e720deb7

--- a/Writing Manual/Guide/Comment System.html
+++ b/Writing Manual/Guide/Comment System.html
@@ -660,22 +660,22 @@ Giscus는 GitHub Discussions를 사용하여 선택한 매핑(URL, 경로 이름
 <h1 id="전제-조건">전제 조건</h1>
 <hr>
 
-<h2 id="github-저장소-만들기">github 저장소 만들기</h2>
+<h2 id="1-github-저장소-만들기">1. github 저장소 만들기</h2>
 
 <p>웹 사이트 호스팅에 <em>GitHub Pages</em> 를 사용할 예정이라면 해당 저장소 (i.e., <code class="language-plaintext highlighter-rouge">[userID].github.io</code>) 를 선택 가능</p>
 
 <p><strong>public</strong> 방문자가 토론을 볼 수 있도록 하려면 repository는 <strong>public</strong> 으로 지정</p>
 
-<h2 id="토론-기능-켜기">토론 기능 켜기</h2>
+<h2 id="2-토론-기능-켜기">2. 토론 기능 켜기</h2>
 
 <p>GitHub 저장소 설정에서 <code class="language-plaintext highlighter-rouge">General</code> &gt; <code class="language-plaintext highlighter-rouge">Features</code> &gt; <code class="language-plaintext highlighter-rouge">Discussions</code>  기능이 활성화되어 있는지 확인</p>
 
 <p><img src="https://i.ibb.co/P1FV02D/giscus-00.png" alt="Discussion" loading="lazy"></p>
 
-<h1 id="giscus-api-활성화">Giscus API 활성화</h1>
+<h1 id="3-giscus-api-활성화">3. Giscus API 활성화</h1>
 <hr>
 
-<p><a href="https://giscus.app/">Configuration guide</a> 를 참고하여 단계별로 진행</p>
+<p>* <a href="https://giscus.app/">Configuration guide</a> 를 참고하여 단계별로 진행</p>
 
 <p><img src="https://i.ibb.co/y87w8rB/giscus-02.png" alt="Verification" loading="lazy"></p>
 
@@ -684,8 +684,7 @@ Giscus는 GitHub Discussions를 사용하여 선택한 매핑(URL, 경로 이름
 
 <p><img src="https://i.ibb.co/0hqLWX0/giscus-03.png" alt="Verification" loading="lazy"></p>
 
-<h2 id="_configyml-복사">
-<code class="language-plaintext highlighter-rouge">_config.yml</code> 복사</h2>
+<h2 id="4-_configyml-복사">4. <code class="language-plaintext highlighter-rouge">_config.yml</code> 복사</h2>
 
 <p>giscus script를 얻었으며, 아래에 표시된 것처럼 빨간 상자로 표시된 네 가지 속성을 복사</p>
 
