deploy: e6f5d5cfbb020d64db1d17e1e233e019b5c9bd37

--- a/Writing Manual/Guide/Comment System.html
+++ b/Writing Manual/Guide/Comment System.html
@@ -672,7 +672,7 @@ Giscus는 GitHub Discussions를 사용하여 선택한 매핑(URL, 경로 이름
 
 <p><img src="https://i.ibb.co/P1FV02D/giscus-00.png" alt="Discussion" loading="lazy"></p>
 
-<h1 id="3-giscus-api-활성화">3. Giscus API 활성화</h1>
+<h1 id="giscus-api-활성화">Giscus API 활성화</h1>
 <hr>
 
 <p>* <a href="https://giscus.app/">Configuration guide</a> 를 참고하여 단계별로 진행</p>
@@ -684,7 +684,7 @@ Giscus는 GitHub Discussions를 사용하여 선택한 매핑(URL, 경로 이름
 
 <p><img src="https://i.ibb.co/0hqLWX0/giscus-03.png" alt="Verification" loading="lazy"></p>
 
-<h2 id="4-_configyml-복사">4. <code class="language-plaintext highlighter-rouge">_config.yml</code> 복사</h2>
+<h2 id="1-_configyml-복사">1. <code class="language-plaintext highlighter-rouge">_config.yml</code> 복사</h2>
 
 <p>giscus script를 얻었으며, 아래에 표시된 것처럼 빨간 상자로 표시된 네 가지 속성을 복사</p>
 
