--- a/index.html
+++ b/index.html
@@ -1934,7 +1934,7 @@ GitHub 저장소 설정에서 General &gt; Features &gt; Discussions  기능이 
 
 
 
-3. Giscus API 활성화
+Giscus API 활성화
 
 
 * Configuration guide 를 참고하여 단계별로 진행
@@ -1946,7 +1946,7 @@ GitHub 저장소 설정에서 General &gt; Features &gt; Discussions  기능이 
 
 
 
-4. _config.yml 복사
+1. _config.yml 복사
 
 giscus script를 얻었으며, 아래에 표시된 것처럼 빨간 상자로 표시된 네 가지 속성을 복사
 
