--- a/License/네트워크관리사/TCP-IP.html
+++ b/License/네트워크관리사/TCP-IP.html
@@ -495,6 +495,48 @@
     <h1 id="tcpudp">TCP/UDP</h1>
 <hr>
 
+<h3 id="tcp-헤더-영역">TCP 헤더 영역</h3>
+
+<table>
+  <tr>
+    <th>0 ~ 3</th>
+    <th>4 ~ 9</th>
+    <th>10</th>
+    <th>11</th>
+    <th>12</th>
+    <th>13</th>
+    <th>14</th>
+    <th>15</th>
+    <th>16 ~ 31</th>
+  </tr>
+  <tr>
+      <td colspan="8">Source Port <br> 송신쪽 포트 번호</td>
+      <td>Destination Port <br> 목적지 포트 번호</td>
+  </tr>
+  <tr>
+      <td colspan="9">Sequence Number <br> 송신용 순서 번호</td>
+  </tr>
+  <tr>
+      <td colspan="9">ACK <br> 응답 확인 번호 <br> 수신 측에 맞춰 송신 측에서 데이터의 크기를 적절하게 조절하는 필드 <br> Sliding Window </td>
+  </tr>
+  <tr>
+      <td>HLEN (Data Offset) <br> 헤더의 길이</td>
+      <td>Reserved <br> 예약</td>
+      <td colspan="6">플래그비트</td>
+      <td>Window Size <br> 한번에 전송할 수 있는 크기</td>
+  </tr>
+  <tr>
+      <td colspan="8">Checksum <br> TCP헤더와 데이터가 제대로 전송됐는지 검사하는 영역</td>
+      <td>Urgent Pointer <br> 긴급 전송 시 사용</td>
+  </tr>
+  <tr>
+      <td colspan="9">Option <br> 선택 가능</td>
+  </tr>
+  <tr>
+      <td colspan="9"> DATA </td>
+  </tr>
+</table>
+
 <h3 id="tcp와-udp-비교-정리">TCP와 UDP 비교 정리</h3>
 
 <table>
