deploy: f67e817bcbfaf2e337ce37b7129166087dc4c679

--- a/index.html
+++ b/index.html
@@ -452,43 +452,52 @@
 
 1. 물리 계층 (Physical Layer)
 
-&gt; 역할 : 전기적 신호, 광 신호, 전송 매체를 통해 데이터 전송
-&gt; 프로토콜 : Ethernet, RS-232, DSL
+
+  역할 : 전기적 신호, 광 신호, 전송 매체를 통해 데이터 전송
+프로토콜 : Ethernet, RS-232, DSL
+
 
 
 2. 데이터 링크 계층 (Data Link Layer)
 
-&gt; 역할 : 오류 검출 및 수정, 데이터 프레임 전송
-&gt; 프로토콜 : Ethernet, PPP, MAC, ARP
+
+  역할 : 오류 검출 및 수정, 데이터 프레임 전송
+프로토콜 : Ethernet, PPP, MAC, ARP
 
 
 3. 네트워크 계층 (Network Layer)
 
-&gt; 역할 : 경로 결정, 논리적 주소(IP) 지정
-&gt; 프로토콜 : IP, ICMP, OSPF, RIP
+
+  역할 : 경로 결정, 논리적 주소(IP) 지정
+프로토콜 : IP, ICMP, OSPF, RIP
 
 
 4. 전송 계층 (Transport Layer)
 
-&gt; 역할 : 종단 간 데이터 전송 보장, 흐름 제어, 오류 복구
-&gt; 프로토콜 : TCP, UDP
+
+  역할 : 종단 간 데이터 전송 보장, 흐름 제어, 오류 복구
+프로토콜 : TCP, UDP
 
 
 5. 세션 계층 (Session Layer)
 
-&gt; 역할 : 세션 설정, 유지 및 종료, 대화 제어
-&gt; 프로토콜 : NetBIOS, RPC
+
+  역할 : 세션 설정, 유지 및 종료, 대화 제어
+프로토콜 : NetBIOS, RPC
 
 
 6. 표현 계층 (Presentation Layer)
 
-&gt; 역할 : 데이터 형식 변환, 암호화, 압축
-&gt; 프로토콜 : SSL/TLS, JPEG, MPEG
+
+  역할 : 데이터 형식 변환, 암호화, 압축
+프로토콜 : SSL/TLS, JPEG, MPEG
 
 
 7. 응용 계층 (Application Layer)
-&gt; 역할 : 사용자와 네트워크 서비스 간의 인터페이스 제공
-&gt; 프로토콜 : HTTP(80), FTP(21), SMTP(25), DNS(53)
+
+
+  역할 : 사용자와 네트워크 서비스 간의 인터페이스 제공
+프로토콜 : HTTP(80), FTP(21), SMTP(25), DNS(53)
 
 
 
