--- a/Writing Manual/Guide/Posting Guide.html
+++ b/Writing Manual/Guide/Posting Guide.html
@@ -241,11 +241,11 @@
                                     </a>
                                 </div>
                             </li>
-<li id="nav-third" aria-label="포트번호 정리">
+<li id="nav-third" aria-label="주요 포트번호">
                                 <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html" class="nav-list-link nav-sh">
+                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EC%A3%BC%EC%9A%94%20%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8.html" class="nav-list-link nav-sh">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>포트번호 정리</span>
+                                        <span>주요 포트번호</span>
                                     </a>
                                 </div>
                             </li>
@@ -932,11 +932,11 @@ bookmark: true
     
 
         posts.push({
-            'title'    : "포트번호 정리",
+            'title'    : "주요 포트번호",
             'path'     : "License > 네트워크관리사",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8%20%EC%A0%95%EB%A6%AC.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EC%A3%BC%EC%9A%94%20%ED%8F%AC%ED%8A%B8%EB%B2%88%ED%98%B8.html",
             'image'    : "",
             'date'     : "2024-06-20"
         });
