deploy: 1e9ba5ea77c0bb5c7b1a6ecfa1c2b86842e66d4a

--- a/License/index.html
+++ b/License/index.html
@@ -245,14 +245,6 @@
                                     </a>
                                 </div>
                             </li>
-<li id="nav-third" aria-label="IP">
-                                <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP.html" class="nav-list-link nav-sh">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>IP</span>
-                                    </a>
-                                </div>
-                            </li>
 <li id="nav-third" aria-label="OSI 7계층">
                                 <div class="nav-item">
                                     <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/OSI%207%EA%B3%84%EC%B8%B5.html" class="nav-list-link nav-sh">
@@ -1175,12 +1167,12 @@ TCP와 UDP 비교 정리
                 <div id="article_content">
                     <div class="thumbnail_zone">
                         
-                            <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP.html" class="thumbnail_post" loading="lazy" aria-label="thumbnail_post" style="background-image:url('') !important"></a>
+                            <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP%20%EA%B4%80%EB%A0%A8/IP.html" class="thumbnail_post" loading="lazy" aria-label="thumbnail_post" style="background-image:url('') !important"></a>
                         
                     </div>
                     <div class="box_contents">
-                        <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP.html"><h1 class="title_post">IP</h1></a>
-                        <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP.html" class="txt_post">
+                        <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP%20%EA%B4%80%EB%A0%A8/IP.html"><h1 class="title_post">IP</h1></a>
+                        <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP%20%EA%B4%80%EB%A0%A8/IP.html" class="txt_post">
                             IP
 
 IP주소란 TCP/IP 네트워크 모델 구조에서 컴퓨터를 식별하기 위해 사용하는 것
@@ -1505,10 +1497,10 @@ IP 주소 체계
 
         posts.push({
             'title'    : "IP",
-            'path'     : "License > 네트워크관리사",
+            'path'     : "License > 네트워크관리사 > IP 관련",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP%20%EA%B4%80%EB%A0%A8/IP.html",
             'image'    : "",
             'date'     : "2024-06-19"
         });
