deploy: 42dbca3f698d9682069a9f2ba4a61659e8d1b994

--- a/Portfolio/Introduce.html
+++ b/Portfolio/Introduce.html
@@ -237,14 +237,6 @@
                         </button>
 </div>
 <ul class="nav-list">
-<li id="nav-third" aria-label="기타 프로토콜">
-                                <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EA%B8%B0%ED%83%80%20%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C.html" class="nav-list-link nav-sh">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>기타 프로토콜</span>
-                                    </a>
-                                </div>
-                            </li>
 <li id="nav-third" aria-label="네트워크 계층 모델">
                                 <div class="nav-item">
                                     <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%20%EA%B3%84%EC%B8%B5%20%EB%AA%A8%EB%8D%B8/index.html" class="nav-list-link nav-sh">
@@ -820,10 +812,10 @@
 
         posts.push({
             'title'    : "기타 프로토콜",
-            'path'     : "License > 네트워크관리사",
+            'path'     : "License > 네트워크관리사 > 포트-프로토콜",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EA%B8%B0%ED%83%80%20%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%8F%AC%ED%8A%B8-%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C/%EA%B8%B0%ED%83%80%20%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C.html",
             'image'    : "",
             'date'     : "2024-06-20"
         });
