deploy: 6d14621e4c58b1720b2b049a3cc0576189fe0a99

--- a/Writing Manual/Guide/Posting Guide.html
+++ b/Writing Manual/Guide/Posting Guide.html
@@ -269,14 +269,6 @@
                                     </a>
                                 </div>
                             </li>
-<li id="nav-third" aria-label="OSI 7계층">
-                                <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/OSI%207%EA%B3%84%EC%B8%B5.html" class="nav-list-link nav-sh">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>OSI 7계층</span>
-                                    </a>
-                                </div>
-                            </li>
 <li id="nav-third" aria-label="TCP">
                                 <div class="nav-item">
                                     <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/TCP.html" class="nav-list-link nav-sh">
@@ -989,10 +981,10 @@ bookmark: true
 
         posts.push({
             'title'    : "OSI 7계층",
-            'path'     : "License > 네트워크관리사",
+            'path'     : "License > 네트워크관리사 > 네트워크 계층 모델",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/OSI%207%EA%B3%84%EC%B8%B5.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%20%EA%B3%84%EC%B8%B5%20%EB%AA%A8%EB%8D%B8/OSI%207%EA%B3%84%EC%B8%B5.html",
             'image'    : "",
             'date'     : "2024-06-21"
         });
