deploy: 71e7b2fbf132f779002c5780ab5c74f2ded4e17e

--- a/License/네트워크관리사/포트-프로토콜/index.html
+++ b/License/네트워크관리사/포트-프로토콜/index.html
@@ -227,14 +227,6 @@
                                     </a>
                                 </div>
                             </li>
-<li id="nav-third" aria-label="서브넷 마스크-클래스">
-                                <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EC%84%9C%EB%B8%8C%EB%84%B7%20%EB%A7%88%EC%8A%A4%ED%81%AC-%ED%81%B4%EB%9E%98%EC%8A%A4.html" class="nav-list-link nav-sh">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>서브넷 마스크-클래스</span>
-                                    </a>
-                                </div>
-                            </li>
 <li id="nav-third" aria-label="포트-프로토콜">
                                 <div class="nav-item">
                                     <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%ED%8F%AC%ED%8A%B8-%ED%94%84%EB%A1%9C%ED%86%A0%EC%BD%9C/index.html" class="nav-list-link nav-sh">
@@ -1125,22 +1117,22 @@ RIP
     
 
         posts.push({
-            'title'    : "OSI 7계층",
-            'path'     : "License > 네트워크관리사 > 네트워크 계층 모델",
+            'title'    : "서브넷 마스크/클래스",
+            'path'     : "License > 네트워크관리사 > IP 관련",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%20%EA%B3%84%EC%B8%B5%20%EB%AA%A8%EB%8D%B8/OSI%207%EA%B3%84%EC%B8%B5.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/IP%20%EA%B4%80%EB%A0%A8/%EC%84%9C%EB%B8%8C%EB%84%B7%20%EB%A7%88%EC%8A%A4%ED%81%AC-%ED%81%B4%EB%9E%98%EC%8A%A4.html",
             'image'    : "",
             'date'     : "2024-06-21"
         });
     
 
         posts.push({
-            'title'    : "서브넷 마스크/클래스",
-            'path'     : "License > 네트워크관리사",
+            'title'    : "OSI 7계층",
+            'path'     : "License > 네트워크관리사 > 네트워크 계층 모델",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EC%84%9C%EB%B8%8C%EB%84%B7%20%EB%A7%88%EC%8A%A4%ED%81%AC-%ED%81%B4%EB%9E%98%EC%8A%A4.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%20%EA%B3%84%EC%B8%B5%20%EB%AA%A8%EB%8D%B8/OSI%207%EA%B3%84%EC%B8%B5.html",
             'image'    : "",
             'date'     : "2024-06-21"
         });
