--- a/License/네트워크관리사/포트-프로토콜/index.html
+++ b/License/네트워크관리사/포트-프로토콜/index.html
@@ -257,14 +257,6 @@
                                     </a>
                                 </div>
                             </li>
-<li id="nav-third" aria-label="TCP">
-                                <div class="nav-item">
-                                    <a href="/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/TCP.html" class="nav-list-link nav-sh">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"></path></svg>
-                                        <span>TCP</span>
-                                    </a>
-                                </div>
-                            </li>
 </ul>
 </li></ul>
 </li>
@@ -1129,10 +1121,10 @@ RIP
 
         posts.push({
             'title'    : "TCP",
-            'path'     : "License > 네트워크관리사",
+            'path'     : "License > 네트워크관리사 > TCP-UDP",
             'type'     : "post",
             'tags'     : "License, 네트워크관리사, 필기, 이론",
-            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/TCP.html",
+            'url'      : "/License/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC%EA%B4%80%EB%A6%AC%EC%82%AC/TCP-UDP/TCP.html",
             'image'    : "",
             'date'     : "2024-06-19"
         });
