deploy: 1740f237b15b11039df8fe397e1f103edfb781e3

--- a/License/SQLD/index.html
+++ b/License/SQLD/index.html
@@ -557,6 +557,13 @@ RDBMS
 &gt; 예시 : MySQL, Oracle Database, SQL Server, PostgreSQL 등
 
 
+논리적·물리적 데이터 구성 요소
+
+
+  논리적일 때 : 엔터티, 속성, 인스턴스
+  물리적일 때 : 테이블, 컬럼, 행
+
+
                         </a>
                         <div class="info-post">
                                 <a href="/License" class="category">License</a>
