--- a/License/SQLD/기초 데이터베이스 개념.html
+++ b/License/SQLD/기초 데이터베이스 개념.html
@@ -607,6 +607,13 @@
 &gt; 예시 : MySQL, Oracle Database, SQL Server, PostgreSQL 등</p>
 </blockquote>
 
+<h2 id="논리적물리적-데이터-구성-요소">논리적·물리적 데이터 구성 요소</h2>
+<hr>
+<ul>
+  <li>논리적일 때 : 엔터티, 속성, 인스턴스</li>
+  <li>물리적일 때 : 테이블, 컬럼, 행</li>
+</ul>
+
     <!-- see https://giscus.app/ -->
     <div class="giscus" id="giscus" style="margin: 4rem auto;"></div>
     <div id="related-box">
