deploy: 1d0b8a8963aab0f95fd06b4e31c6defd377147dd

--- a/index.html
+++ b/index.html
@@ -572,11 +572,14 @@
 
 데이터 모델링 3단계
 * 밑으로 갈수록 구체화, 위로 갈수록 추상화
-1. 개념적 모델링 : 업무 엽의에 있어서 이 정도가 필요하겠다 정도
-2. 논리적 모델링 : 세부속성, 식별자, 관계 표현
-                   정규화 수행 단계
-3. 물리적 모델링 : 앞의 논리적 설계를 실질적(물리적)으로 생성
-                   성능, 저장구조, 보안, 가용성 등을 고려하는 단계
+1. 개념적 모델링
+    - 업무 협의에 있어서 이 정도가 필요하겠다 정도
+2. 논리적 모델링
+    - 세부속성, 식별자, 관계 표현
+    - 정규화 수행 단계
+3. 물리적 모델링
+    - 앞의 논리적 설계를 실질적(물리적)으로 생성
+    - 성능, 저장구조, 보안, 가용성 등을 고려하는 단계
 
 
 ERD (Entity Relationship Diagram)
