deploy: eae3d2d4fa8adb0e8fd659de967030964b15f126

--- a/License/index.html
+++ b/License/index.html
@@ -566,10 +566,12 @@
 개념
 
 
-  독립적으로 식별 가능한 객체나 사물
-  데이터 표현의 최소한의 단위
-  엔터티는 인스턴스의 집합
-  인스턴스는 속성의 집합
+  
+    독립적으로 식별 가능한 객체나 사물
+    데이터 표현의 최소한의 단위
+    엔터티는 인스턴스의 집합
+    인스턴스는 속성의 집합
+  
 
 
 예시
@@ -582,11 +584,13 @@
 특징
 
 
-  유일한 식별자에 의해 식별 가능 (사번, 학번 등 고유 번호)
-  엡무에 필요하고 관리하고자 하는 정보
-  2개 이상의 인스턴스의 집합
-  엔터티는 반드시 **속성 필요 **
-  타 엔터티와 최소 1개 이상의 관계 성립
+  
+    유일한 식별자에 의해 식별 가능 (사번, 학번 등 고유 번호)
+    엡무에 필요하고 관리하고자 하는 정보
+    2개 이상의 인스턴스의 집합
+    엔터티는 반드시 속성 필요
+    타 엔터티와 최소 1개 이상의 관계 성립
+  
 
 
 분류
