--- a/License/SQLD/데이터 모델링.html
+++ b/License/SQLD/데이터 모델링.html
@@ -612,11 +612,11 @@
         </span>
 </div>
 <main>
-    <h1 id="데이터-모델링">데이터 모델링</h1>
+    <h2 id="데이터-모델링">데이터 모델링</h2>
 <hr>
 <p>* 비즈니스 프로세스와 데이터 요구사항을 추상적이고 구조화된 형태로 표현</p>
 
-<h2 id="특징">특징</h2>
+<h3 id="특징">특징</h3>
 
 <blockquote>
   <ol>
@@ -626,7 +626,7 @@
   </ol>
 </blockquote>
 
-<h2 id="유의점">유의점</h2>
+<h3 id="유의점">유의점</h3>
 
 <blockquote>
   <ol>
@@ -636,7 +636,7 @@
   </ol>
 </blockquote>
 
-<h2 id="3가지-요소">3가지 요소</h2>
+<h3 id="3가지-요소">3가지 요소</h3>
 
 <blockquote>
   <ol>
@@ -646,7 +646,7 @@
   </ol>
 </blockquote>
 
-<h2 id="데이터-모델링-3단계">데이터 모델링 3단계</h2>
+<h3 id="데이터-모델링-3단계">데이터 모델링 3단계</h3>
 <p>* 밑으로 갈수록 구체화, 위로 갈수록 추상화</p>
 
 <blockquote>
@@ -671,11 +671,11 @@
   </ol>
 </blockquote>
 
-<h2 id="erd-entity-relationship-diagram">ERD (Entity Relationship Diagram)</h2>
+<h3 id="erd-entity-relationship-diagram">ERD (Entity Relationship Diagram)</h3>
 <p>* 엔터티 간의 관계를 시각적으로 표현한 것이며, 1976년 피터첸이 만든 것</p>
 
 <blockquote>
-  <p>6단계</p>
+  <p><strong>6단계</strong></p>
   <ol>
     <li>엔터티 도출</li>
     <li>엔터티 배치</li>
