--- a/License/SQLD/속성.html
+++ b/License/SQLD/속성.html
@@ -627,11 +627,11 @@
 <hr>
 
 <h3 id="개념">개념</h3>
-
 <blockquote>
   <ul>
     <li>업무에서 필요로 하는 고유한 성질</li>
-    <li>더이상 분리되지 않는 <strong>최소한의 단위</strong>
+    <li>더이상 분리되지 않는 <strong>최소한의 단위</strong><br>
+<br>
 </li>
   </ul>
 </blockquote>
@@ -644,35 +644,38 @@
 </li>
     <li>1개 엔터티는 <strong>2개 이상의 속성</strong>
 </li>
-    <li>1개 속성은 <strong>1개의 속성값</strong> (원자성 : 두 개 이상의 값을 가질 수 없음)</li>
+    <li>1개 속성은 <strong>1개의 속성값</strong> (원자성 : 두 개 이상의 값을 가질 수 없음)<br>
+<br>
+</li>
   </ul>
 </blockquote>
 
 <h3 id="특징">특징</h3>
-
 <blockquote>
   <ul>
     <li>업무에 필요해야</li>
     <li>주식별자에 함수적 종속성을 가져야<br>
   (학번이 달라지면 이름이 달라지므로 이름이라는 속성은 주식별자 학번에 함수적 종속성을 띤다)</li>
-    <li>하나의 속성에 여러 값이 있을 경우 분리해야</li>
+    <li>하나의 속성에 여러 값이 있을 경우 분리해야<br>
+<br>
+</li>
   </ul>
 </blockquote>
 
 <h3 id="함수적-종속성">함수적 종속성</h3>
-
 <blockquote>
   <ul>
     <li>완전 함수적 종속<br>
   PK 구성하는 컬럼이 2개 이상일 때 타 컬럼의 값이 정해지는 경우<br>
   (주문번호, 제품번호에 따라 수량이 정해지는 경우)</li>
     <li>부분 함수적 종속<br>
-  일부 PK로도 결정 가능</li>
+  일부 PK로도 결정 가능<br>
+<br>
+</li>
   </ul>
 </blockquote>
 
 <h3 id="분류">분류</h3>
-
 <blockquote>
   <p><strong>특성에 따른</strong></p>
   <ul>
@@ -696,23 +699,25 @@
   <ul>
     <li>단일속성 : 하나의 의미</li>
     <li>복합속성 : 여러개의 의미 (주소 : 시, 군, 구, 동 등으로 분할 가능)</li>
-    <li>다중속성 : 전화번호와 같이 여러개</li>
+    <li>다중속성 : 전화번호와 같이 여러개<br>
+<br>
+</li>
   </ul>
 </blockquote>
 
 <h3 id="명명규칙">명명규칙</h3>
-
 <blockquote>
   <ul>
     <li>해당 업무에 사용</li>
     <li>서술식 X</li>
     <li>약어 사용 X</li>
-    <li>유일한 명칭</li>
+    <li>유일한 명칭<br>
+<br>
+</li>
   </ul>
 </blockquote>
 
 <h3 id="도메인">도메인</h3>
-
 <blockquote>
   <ul>
     <li>속성이 가질 수 있는 값의 범위</li>
